# DisplayMusic

./: .gitignore  CMakeLists.txt  DisplayMusic.cpp  README.md
apps/: apps_arrays.cpp  apps_arrays.h  apps_wave_file.cpp  apps_wave_file.h
classes/: coords.h  line.cpp  line.h
examples/: ampl_edit.h  ampl_view.cpp  ampl_view.h
